<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProteinTracker</string>
    <string name="hello_world">Login!</string>
    <string name="register">Registration!</string>
    <string name="action_settings">Settings</string>
    <string name="action_AddUser">Add User</string>
    <string name="action_protein_add">Add protein</string>
    <string name="btn_test">Testing Button</string>
    <string name="action_Protein_list">Add Protein</string>

    <!-- - Login Field Hint - -->

    <string name="email">Enter you email</string>
    <string name="password">Enter you password</string>
    <string name="login">Login</string>

    <!-- - Login Field Hint - -->


    <!-- - Registration Field Hint - -->

    <string name="editText_name_hint">Enter your Name</string>
    <string name="editText_email_hint">Enter your Email</string>
    <string name="editText_phone_hint">Enter your Phone</string>
    <string name="editText_address_hint">Enter your Address</string>
    <string name="editText_register_pass">Enter your password</string>
    <string name="submit">SUBMIT</string>

    <!-- - Registration Field Hint - -->

    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- - Home Page Hint - -->

    <string name="Enter_target">Enter your target</string>
    <string name="btn_save">SAVE</string>

    <!-- - Home Page Hint - -->

    <string name="title_activity_protein_list">ProteinListActivity</string>

</resources>
